https://github.com/Surya-M2002/Portfolio.git

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <a href="assets\Surya_Resume.pdf.pdf" download="Surya_Murugesan_Resume.pdf" class="resume-download-btn"><i class="bi bi-download"></i> Download Resume</a>
               </div>
 
-    </section>```<!-- /Hero Section -->
+    </section><!-- /Hero Section -->
 
     <!-- About Section -->
     <section id="about" class="about section">
