--- a/index.html
+++ b/index.html
@@ -120,19 +120,31 @@
 
   <main class="main">
 
-    <!-- Hero Section -->
    <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+  <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Surya Murugesan</h2>
-        <p>I'm <span class="typed" data-typed-items="UIUX Designer, Frontend Developer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <h2>Surya Murugesan</h2>
+    <p>I'm <span class="typed" data-typed-items="UIUX Designer, Frontend Developer">Designer</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
 
-                <a href="assets\Surya_Resume.pdf.pdf" download="Surya_Murugesan_Resume.pdf" class="resume-download-btn"><i class="bi bi-download"></i> Download Resume</a>
-              </div>
+    <a href="assets/Surya_Resume.pdf.pdf" 
+       download="Surya_Murugesan_Resume.pdf" 
+       class="resume-download-btn"
+       onclick="alert('Resume download has started! Thank you for your interest.');">
+        <i class="bi bi-download"></i> Download Resume
+    </a>
+    
+  </div>
 
-    </section><!-- /Hero Section -->
+</section>
+
+<a href="assets/Surya_Resume.pdf.pdf" 
+   download="Surya_Murugesan_Resume.pdf" 
+   class="resume-download-btn"
+   onclick="notifyDownload()">
+    <i class="bi bi-download"></i> Download Resume
+</a>
 
     <!-- About Section -->
     <section id="about" class="about section">
