http://surya,-portfolio.netlify.app

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <ul>
                 <li>Theevattipatti,Danishpet,Kadayampatti,Salem-636354</li>
                 <li>+91 99006 77796</li>
-                <li>alice.barkley@example.com</li>
+                <li>ceecsurya.m2025@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
