http://surya,-portfolio.netlify.app

--- a/project-7.html
+++ b/project-7.html
@@ -138,15 +138,18 @@
           <div class="col-lg-8">
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
               <h2>Frontend Development: Vaanavil Calibration Website</h2>
-              <p>
-                This project involved building a professional, responsive website for Vaanavil Calibration, a technical services company.
-              </p>
-              <p>
-                <strong>The Goal:</strong> To build a clean, fast-loading, and professional website to showcase their calibration services, establish credibility, and generate leads.
-              </p>
-              <p>
-                <strong>My Role:</strong> I translated a Figma design into a pixel-perfect, interactive React application. My focus was on creating reusable components, ensuring the website was fully responsive on all devices, and integrating a functional contact form for lead capture.
-              </p>
+                 <p>
+                    This project involved building a professional, responsive website for Vaanavil Calibration, a technical services company.
+                  </p>
+
+                <p>
+                  <strong>The Goal:</strong> To build a clean, fast-loading, and professional website to showcase their calibration services, establish credibility, and generate leads.
+                </p>
+
+                <p>
+                  <strong>My Role:</strong> I fully redesigned the website’s UI from scratch and updated the entire site using pure HTML, CSS, and JavaScript. I translated the design into a clean, modern interface, ensured full responsiveness across all devices, improved layout structure, and enhanced user experience with subtle animations and better content organization. I also optimized the website for performance and usability.
+                </p>
+
             </div>
           </div>
 
