https://suryam-portfolio.netlify.app

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item">
           <i class="bi bi-palette"></i>
-          <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1" class="purecounter"></span>
           <p><strong>UI/UX Projects</strong> <span>Creative. Clean. Intuitive.</span></p>
         </div>
       </div><!-- End Stats Item -->
@@ -410,6 +410,7 @@ Bethel Matriculation Higher Secondary School</em></p>
                 <li>Rental Platform: Designed a responsive website for finding and listing property rentals.</li>
                 <li>Warehouse Management System: Created high-fidelity mockups for a desktop inventory tracking dashboard.</li>
                 <li>University Admissions Portal: Designed a seamless, multi-step application portal to simplify student admissions.</li>
+                <li>E-Commerce Shop Website : Designed a seamless,Created a High-fidelity E-Commercerce website ,local shop can link and users can order .</li>
                 <li>I created a coffeshop app in <strong>adobe xd</strong></li>
               </ul>
             </div><!-- Edn Resume Item -->
