https://suryam-portfolio.netlify.app

--- a/index.html
+++ b/index.html
@@ -415,6 +415,16 @@ Bethel Matriculation Higher Secondary School</em></p>
               </ul>
             </div><!-- Edn Resume Item -->
 
+             <div class="resume-item">
+              <h4>Frontend Projects</h4>
+              <h5>2025-Present</h5>
+              
+              <ul>
+                 <li> I fully redesigned the website’s UI from scratch and updated the entire site using pure HTML, CSS, and JavaScript.<strong>Vaanavil Calibration</strong></li>
+                <li>Created a Admission Platform Website using Reactjs</li>
+              </ul>
+            </div><!-- Edn Resume Item -->
+
             <div class="resume-item">
               <h4>Graphic design specialist</h4>
               <h5>2025</h5>
