--- a/project-8.html
+++ b/project-8.html
@@ -145,7 +145,7 @@
                 <strong>The Goal:</strong> To translate the high-fidelity Figma designs into a fully functional, responsive, and fast web application.
               </p>
               <p>
-                <strong>My Role:</strong> I developed all user-facing components in React, managed complex application state (like the multi-step form), and integrated with a mock REST API for handling student applications and data. The focus was on creating a fast, accessible, and error-free interface for both students and administrators.
+                <strong>My Role:</strong> I developed all user-facing components in React-js, managed complex application state (like the multi-step form), and integrated with a mock REST API for handling student applications and data. The focus was on creating a fast, accessible, and error-free interface for both students and administrators.
               </p>
             </div>
           </div>
