https://suryam-portfolio.netlify.app

--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ Bethel Matriculation Higher Secondary School</em></p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
+              <h4>Graphic design specialist.</h4>
               <h5>2025</h5>
               
               <ul>
