https://github.com/Surya-M2002/Portfolio.git

--- a/project-8.html
+++ b/project-8.html
@@ -130,7 +130,7 @@
                 <li><strong>Category</strong>: Frontend Development</li>
                 <li><strong>Project Type</strong>: Frontend Build</li>
                 <li><strong>Tools Used</strong>: React, Bootstrap, API</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://admission55.netlify.app/">https://admission55.netlify.app/</a></li>
               </ul>
             </div>
           </div>
