https://github.com/Surya-M2002/Portfolio.git

--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
                                             <img src="assets/img/portfolio/vaanavil.png" class="img-fluid" alt="" />
                                             <div class="portfolio-info">
                                                 <h4>FullStack Project 1</h4>
-                                                <p>Vaanavil Calibration</p>
+                                                <p>E-Commerce</p>
                                                 <a href="assets/img/portfolio/vaanavil.png" title="Vaanavil Calibration" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i
                     ></a>
                                                 <a href="project-7.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i
