https://github.com/Surya-M2002/Portfolio.git

--- a/project-7.html
+++ b/project-7.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Project Details - Vaanavil Calibration</title>
+    <title>Project Details - E-commerce</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -113,7 +113,7 @@
     <main class="main">
         <div class="page-title dark-background">
             <div class="container d-lg-flex justify-content-between align-items-center">
-                <h1 class="mb-2 mb-lg-0">Vaanavil Calibration</h1>
+                <h1 class="mb-2 mb-lg-0">E-Commerce</h1>
                 <nav class="breadcrumbs">
                     <ol>
                         <li><a href="index.html">Home</a></li>
@@ -136,11 +136,11 @@
                         <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
                             <h3>Project Information</h3>
                             <ul>
-                                <li><strong>Category</strong>: Frontend Development</li>
-                                <li><strong>Client</strong>: Vaanavil Calibration</li>
-                                <li><strong>Tools Used</strong>: Html, CSS, JavaScript</li>
+                                <li><strong>Category</strong>: FullStack(MERN) Development</li>
+                                <li><strong>Client</strong>: E-Commerce Website</li>
+                                <li><strong>Tools Used</strong>: Html, CSS, React-js ,Bootstrap ,Node.js ,Express.js , Mongodb</li>
                                 <li><strong>Project URL</strong>:
-                                    <a href="https://e-commerce-website055.netlify.app"></a>
+                                    <a href="https://e-commerce-website055.netlify.app">https://e-commerce-website055.netlify.app</a>
                                 </li>
                             </ul>
                         </div>
