--- a/index.html
+++ b/index.html
@@ -378,12 +378,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="progress mb-4">
-                                        <span class="skill"><span>JavaScript</span> <i class="val">80%</i></span>
-                                        <div class="progress-bar-wrap">
-                                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                        </div>
-                                    </div>
+
                                     <!-- End Skills Item -->
 
                                     <!-- React -->
@@ -740,11 +735,11 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
                                         <div class="portfolio-content h-100">
-                                            <img src="assets/img/portfolio/vaanavil.png" class="img-fluid" alt="" />
+                                            <img src="assets\img\portfolio\e-commerce.png" class="img-fluid" alt="" />
                                             <div class="portfolio-info">
                                                 <h4>FullStack Project 1</h4>
                                                 <p>E-Commerce</p>
-                                                <a href="assets/img/portfolio/vaanavil.png" title="Vaanavil Calibration" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i
+                                                <a href="assets/img/portfolio/vaanavil.png" title="E-Commerce" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i
                     ></a>
                                                 <a href="project-7.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i
                     ></a>
