https://github.com/Surya-M2002/Portfolio.git

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <a href="#about"><i class="bi bi-person navicon"></i> About</a>
                 </li>
                 <li>
-                    <a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a
+                    <a href="#resume"><i class="bi bi-file-earmark-text navicon"></i>Experience</a
             >
           </li>
           <li>
@@ -173,7 +173,7 @@
           </p>
 
           <a
-            href="assets/Surya_Resume.pdf.pdf"
+            href="assets\Surya_M_UIUX_Designer.pdf.pdf"
             download="Surya_Murugesan_Resume.pdf"
             class="resume-download-btn"
             onclick="alert('Resume download has started! Thank you for your interest.');"
@@ -521,11 +521,19 @@
                     <section id="resume" class="resume section">
                         <!-- Section Title -->
                         <div class="container section-title" data-aos="fade-up">
-                            <h2>Resume</h2>
+                            <h2>Experience</h2>
+                            <h4>
+                                UIUX DESIGNER | Nexgen Nextopia,Tiruchengode
+                            </h4>
                             <p>
-                                UI/UX Designer and FullStack Developer with a passion for building pixel-perfect, user-centric web applications. Expert in translating complex ideas into intuitive interfaces using Figma, Adobe XD, and the Adobe Creative Suite. Proven ability to bridge
-                                the gap between design and engineering, with hands-on expertise in HTML, CSS, JavaScript, and React. Seeking to leverage this dual skillset in a collaborative environment to deliver seamless and engaging digital experiences.
+                                JAN 2025 – Present
+                                <br>Designed and developed responsive, user-centric web applications using the MERN stack.
+                                <br>Created UI/UX designs, wireframes, and prototypes using Figma and Adobe XD.
+                                <br>Implemented RESTful APIs, JWT-based authentication, and MongoDB data models.
+                                <br>Optimized application performance and ensured cross-browser compatibility.
+                                <br>Worked closely with stakeholders to refine requirements and improve overall user experience.
                             </p>
+
                         </div>
                         <!-- End Section Title -->
 
@@ -969,6 +977,10 @@
 
                     <!-- Main JS File -->
                     <script src="assets/js/main.js"></script>
+</body>
+
+</html>
+<script src="assets/js/main.js"></script>
 </body>
 
 </html>
